style: Clean up code to improve sonar low severity numbers